# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  16 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +app-emulation/vmware-workstation-tools/files/5.5.2/000_all_initd-scripts.
  patch:
  Added the 5.5.2 directory to vmware-workstation-tools, so it'll patch
  correctly.

  16 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +app-emulation/vmware-esx-tools/files/90vmware-tools,
  +app-emulation/vmware-esx-tools/files/vmware-esx-tools,
  +app-emulation/vmware-esx-tools/files/vmware-esx-tools.rc,
  +app-emulation/vmware-esx-tools/files/xorg.conf,
  +app-emulation/vmware-esx-tools/metadata.xml:
  Initial import of ESX tools. This should work, but requires some manual
  intervention. Before running the vmware-config-tools.pl, you need to rmmod
  pcnet32. You will also need to rm /etc/vmware-tools/not_configured and
  /etc/init.d/vmware-tools start afterwards. I will be working on making sure
  this works with the eclass soon enough with a -r1 revision. Feel free to use
  this now, using the above instructions.

  16 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -app-emulation/vmware-workstation-tools/vmware-workstation-tools-5.5.1-r1.
  ebuild,
  app-emulation/vmware-workstation-tools/vmware-workstation-tools-5.5.1-r2.e
  build,
  +app-emulation/vmware-workstation-tools/vmware-workstation-tools-5.5.2.ebu
  ild:
  Added vmware-workstation-tools-5.5.2 and removed the -r1 ebuild for 5.5.1.

  15 Nov 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Brought the overlay back in sync with the main tree for vmware-modules and
  vmware-server{-console}.
  Also updated to vmware-any-any105 for testing.

  30 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -app-emulation/vmware-modules/vmware-modules-1.0.0.8.ebuild:
  Removed vmware-modules-0.0.8 since we no longer support VMware Workstation
  3.2.1 in the main tree.

  17 Oct 2006; Mike Auty <ikelos@gentoo.org> ChangeLog: