@@ -14,6 +14,10 @@ AUX xorg.conf 2646 RMD160 c3e2e153b3b9520fc8d5fa20e9e8f7a6c3790084 SHA1 a44f4240
 MD5 bd0505ab92d03f82b898858d45787f58 files/xorg.conf 2646
 RMD160 c3e2e153b3b9520fc8d5fa20e9e8f7a6c3790084 files/xorg.conf 2646
 SHA256 2503352f7fd53f23e51d53017f76167a2da0fdfbb9eb434c85573108c6bc53c8 files/xorg.conf 2646
+EBUILD vmware-esx-tools-3.0.1-r1.ebuild 827 RMD160 8b90920e568872049d4631e7cd38985124d83143 SHA1 aea2c847b42127d5915f3594da1693f694291108 SHA256 587166bd2cb35674bf8092d20d9a729ed098cd11528a439342f3791e8fd46faa
+MD5 1763615af7f3e21ce9f0f88c2e383e96 vmware-esx-tools-3.0.1-r1.ebuild 827
+RMD160 8b90920e568872049d4631e7cd38985124d83143 vmware-esx-tools-3.0.1-r1.ebuild 827
+SHA256 587166bd2cb35674bf8092d20d9a729ed098cd11528a439342f3791e8fd46faa vmware-esx-tools-3.0.1-r1.ebuild 827
 EBUILD vmware-esx-tools-3.0.1.ebuild 4566 RMD160 e11dd6679abd6365fbc0b36170e7ec5454a522b3 SHA1 fcb51cfe2d0c35e044f50b3a693e44c42afb7728 SHA256 2f11f0109992dce5a69face157a7527c393db519cd9cfa88f77f353b3db60a5b
 MD5 df16f34ef9440202d2d2acb270e30ae0 vmware-esx-tools-3.0.1.ebuild 4566
 RMD160 e11dd6679abd6365fbc0b36170e7ec5454a522b3 vmware-esx-tools-3.0.1.ebuild 4566
@@ -25,3 +29,6 @@ SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215 metadata
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-vmware-esx-tools-3.0.1 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-vmware-esx-tools-3.0.1 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-vmware-esx-tools-3.0.1 0
+MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-vmware-esx-tools-3.0.1-r1 0
+RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-vmware-esx-tools-3.0.1-r1 0
+SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-vmware-esx-tools-3.0.1-r1 0
